--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf ./dist",
     "mv:server": "cp -r src/server dist && cp src/index.js dist",
     "build": "npm run clean && npm run compile && npm run mv:server",
-    "compile": "cross-env BABEL_ENV=server babel ./src/client --out-dir ./dist/client"
+    "compile": "babel ./src/client --out-dir ./dist/client"
   },
   "keywords": [
     "framework-core",
@@ -32,7 +32,6 @@
     "delegates": "^1.0.0",
     "ejs": "^2.6.1",
     "form-data": "^2.5.0",
-    "history": "^4.7.2",
     "i18next": "^19.0.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "intl": "^1.2.5",
@@ -46,8 +45,6 @@
     "koa-session": "^5.8.3",
     "koa-static": "^4.0.3",
     "koa-views": "^6.1.4",
-    "koa-webpack": "^5.2.2",
-    "lodash.camelcase": "^4.3.0",
     "log4js": "^2.7.0",
     "material-ui-popup-state": "^1.5.1",
     "moment": "^2.22.2",
@@ -56,7 +53,6 @@
     "raf": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18",
     "react-i18next": "^11.1.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
@@ -78,7 +74,6 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.7",
-    "@hot-loader/react-dom": "^16.11.0",
     "autoprefixer": "^8.5.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.6",
@@ -88,9 +83,6 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^6.5.0",
@@ -98,21 +90,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.8.2",
-    "file-loader": "^1.1.11",
-    "html-webpack-harddisk-plugin": "^0.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "nodemon": "^1.17.5",
-    "postcss-loader": "^2.1.5",
-    "postcss-nested": "^4.1.2",
-    "prettier": "^1.19.1",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.2"
+    "prettier": "^1.19.1"
   }
 }
