--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.2.6",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sequelize": "^5.21.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
