--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "clipboard": "^2.0.4",
     "compressible": "^2.0.13",
     "connected-react-router": "^6.6.1",
-    "crypto-js": "^3.1.9-1",
     "decimal.js": "^10.0.1",
     "delegates": "^1.0.0",
     "ejs": "^2.6.1",
@@ -48,6 +47,7 @@
     "log4js": "^2.7.0",
     "material-ui-popup-state": "^1.5.1",
     "moment": "^2.22.2",
+    "mysql2": "^2.1.0",
     "path-to-regexp": "^2.4.0",
     "prop-types": "^15.6.2",
     "raf": "^3.4.1",
