--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "mv:server": "cp -r src/server dist && cp src/index.js dist",
     "build": "npm run clean && npm run compile && npm run mv:server",
     "compile": "babel ./src/client --out-dir ./dist/client",
-    "publish":"npm run build && git commit --all -m'update' && git push"
+    "publish":"npm run build && git add --all && git commit --all -m'update' && git push"
   },
   "keywords": [
     "framework-core",
