--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "raf": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-i18next": "^11.1.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
