--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "material-ui-popup-state": "^1.5.1",
     "moment": "^2.22.2",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.5",
     "path-to-regexp": "^2.4.0",
     "prop-types": "^15.6.2",
     "raf": "^3.4.1",
